# ocaml-smtpd

./: README.md  dune-project  smtpd.opam
lib/dns_client_eio/: dns_client_eio.ml  dns_client_eio.mli  dune
lib/smtp_delivery/: smtp_delivery.ml  smtp_delivery.mli
lib/smtp_dkim/: smtp_dkim.ml
lib/smtp_dns/: dune  smtp_dns.ml  smtp_dns.mli
lib/smtp_qmgr/: smtp_qmgr.ml  smtp_qmgr.mli
lib/smtp_server/: smtp_server.ml  smtp_server.mli
lib/smtp_types/: smtp_types.ml
test/: test_smtp.ml
